chore: declare inceptionYear 2025 and normalise copyright headers
<inceptionYear> is an inherited POM element, and the mycila license plugin
binds the copyright ${year} to project.inceptionYear - not to the current
year. cui-parent-pom held the only declaration in the hierarchy (2022), so
this project reported 2022 and every -Ppre-commit run restamped every
source header. Declaring the real year, taken from this repo's first
commit, stops that.

The 69 header changes are that one-time correction. Verified by running
the gate twice: the second run rewrites nothing and leaves a working tree
identical to the first, which is the property that was broken.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_014sxAQc2ohWuDz65e2DbVij